objects/bofc__BOFCUserProfPerSet__c.object
<CustomObject>
    <fields>
        <fullName>bofc__OrgType__c</fullName>
        <label>OrgType</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Current_Org</fullName>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>bofc__PROFILE_ID__c</fullName>
        <label>PROFILE ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bofc__Profile_Name__c</fullName>
        <label>Profile Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bofc__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>User</fullName>
                </value>
                <value>
                    <fullName>Profile</fullName>
                </value>
                <value>
                    <fullName>PermissionSet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>bofc__UserPermSets2__c</fullName>
        <label>UserPermSets2</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>bofc__UserPermSets3__c</fullName>
        <label>UserPermSets3</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>bofc__UserPermSets4__c</fullName>
        <label>UserPermSets4</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>BOFCUserProfPerSet</label>
    <nameField>
        <label>BOFCUserProfPerSet Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BOFCUserProfPerSet</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>